--- a/install/kubernetes/cilium/values.yaml.tmpl
+++ b/install/kubernetes/cilium/values.yaml.tmpl
@@ -81,6 +81,17 @@ serviceAccounts:
     name: cilium-envoy
     automount: true
     annotations: {}
+  nodeinit:
+    create: true
+    # -- Enabled is temporary until https://github.com/cilium/cilium-cli/issues/1396 is implemented.
+    # Cilium CLI doesn't create the SAs for node-init, thus the workaround. Helm is not affected by
+    # this issue. Name and automount can be configured, if enabled is set to true.
+    # Otherwise, they are ignored. Enabled can be removed once the issue is fixed.
+    # Cilium-nodeinit DS must also be fixed.
+    enabled: false
+    name: cilium-nodeinit
+    automount: true
+    annotations: {}
   etcd:
     create: true
     name: cilium-etcd-operator
