identity: node-selector-labels
This commit adds a new flag `--enable-node-selector-labels` which takes advantage of the
new IdentityScopeRemoteNode. If this flag is enabled it will filter out
node labels based on `--node-labels` list and will append that to
remote-node label. This also adds a new label source
LabelSourceNode="node" which is prepended to all node labels.

Signed-off-by: Ondrej Blazek <ondrej.blazek@firma.seznam.cz>

--- a/install/kubernetes/cilium/values.yaml.tmpl
+++ b/install/kubernetes/cilium/values.yaml.tmpl
@@ -1943,6 +1943,10 @@ envoy:
 # -- Enable use of the remote node identity.
 # ref: https://docs.cilium.io/en/v1.7/install/upgrade/#configmap-remote-node-identity
 remoteNodeIdentity: true
+
+# -- Enable/Disable use of node label based identity
+nodeSelectorLabels: false
+
 # -- Enable resource quotas for priority classes used in the cluster.
 resourceQuotas:
   enabled: false
