bgpv2: introduce flag to enable bgpv2 APIs
Introducing helm field and feature flag to enable BGPv2 APIs. This is
done so we can safely introduce BGPv2 changes.

Signed-off-by: harsimran pabla <hpabla@isovalent.com>

--- a/install/kubernetes/cilium/values.yaml.tmpl
+++ b/install/kubernetes/cilium/values.yaml.tmpl
@@ -411,6 +411,8 @@ bgp:
 bgpControlPlane:
   # -- Enables the BGP control plane.
   enabled: false
+  # -- Enable the BGPv2 APIs.
+  v2Enabled: false
   # -- SecretsNamespace is the namespace which BGP support will retrieve secrets from.
   secretsNamespace:
     # -- Create secrets namespace for BGP secrets.
